Build models, and modify front-end.

--- a/training/diabete_model.ipynb
+++ b/training/diabete_model.ipynb
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3. Extracting Pathological Myopia & Normal information from the dataset"
+    "### Step 3. Extracting Diabete & Normal information from the dataset"
    ]
   },
   {
